# locallibrary

./: db.sqlite3  pyproject.toml  requirements_dev.txt
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_author_options_alter_genre_options_and_more.py  0003_alter_bookinstance_imprint.py  0004_author_user.py
catalog/templates/: author_info.html  authors.html  book_info.html  books.html  home.html
catalog/templates/account/: login.html  register.html
catalog/templates/base/: design.html
catalog/templates/forms/: authreg.html  bookform.html
locallibrary/: settings.py  urls.py
