[tool.poetry]
name = "locallibrary"
version = "0.1.0"
description = "This is a django tutorials on creating online library"
authors = ["chiko liu"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
